[gd_scene load_steps=6 format=3 uid="uid://dfrcr8snmmxal"]

[ext_resource type="Texture2D" uid="uid://be7bfntarygtk" path="res://icon.svg" id="1_k5w7h"]
[ext_resource type="Script" uid="uid://dhs7ioi37elkg" path="res://addons/ambientcg/download_panel.gd" id="1_n6dyb"]
[ext_resource type="Script" uid="uid://cn4gehailmkwg" path="res://addons/ambientcg/download_window.gd" id="1_yby7p"]
[ext_resource type="Script" uid="uid://dc6nvcqhqblh4" path="res://addons/ambientcg/TmakerBG.gd" id="3_my73g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2yn7l"]
bg_color = Color(0.509804, 0.435294, 1, 1)

[node name="DownloadWindow" type="Window"]
title = "Test Window"
initial_position = 4
size = Vector2i(840, 420)
script = ExtResource("1_yby7p")

[node name="DownloadWidget" type="Control" parent="."]
custom_minimum_size = Vector2(320, 192)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n6dyb")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="DownloadWidget"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="Icon" type="TextureRect" parent="DownloadWidget"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0428571
anchor_top = 0.0333333
anchor_right = 0.271429
anchor_bottom = 0.490476
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_k5w7h")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Cancel" type="Button" parent="DownloadWidget"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0428571
anchor_top = 0.871429
anchor_right = 0.42381
anchor_bottom = 0.947619
text = "Cancel
"
metadata/_edit_use_anchors_ = true

[node name="ACGLink" type="Button" parent="DownloadWidget"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.57619
anchor_top = 0.871429
anchor_right = 0.957143
anchor_bottom = 0.947619
text = "Open Material on AmbientCG"
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="DownloadWidget"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.42381
anchor_top = 0.185714
anchor_right = 0.957143
anchor_bottom = 0.795238
metadata/_edit_use_anchors_ = true

[node name="DownloadOptions" type="GridContainer" parent="DownloadWidget/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(136, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 4
metadata/_edit_use_anchors_ = true

[node name="GettingDownloads" type="Label" parent="DownloadWidget/ScrollContainer/DownloadOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Fetching Downloads...
This May Take a Moment"
vertical_alignment = 1

[node name="Label" type="Label" parent="DownloadWidget"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.42381
anchor_top = 0.0333333
anchor_right = 0.957143
anchor_bottom = 0.185714
theme_override_font_sizes/font_size = 32
text = "Downloads"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="DownloadWidget"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0428571
anchor_top = 0.795238
anchor_right = 0.957143
anchor_bottom = 0.871429
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PopulateResourceCheck" type="CheckBox" parent="DownloadWidget/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Populate Resource"
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TriplanarCheck" type="CheckBox" parent="DownloadWidget/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Triplanar UV"
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DownloadVisualizer" type="ColorRect" parent="DownloadWidget"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.588235)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -0.000366211
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.188235, 0.188235, 0.188235, 1.5)
script = ExtResource("3_my73g")
multiplier = 1.5
metadata/_custom_type_script = "uid://dc6nvcqhqblh4"

[node name="VBoxContainer" type="VBoxContainer" parent="DownloadWidget/DownloadVisualizer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="DownloadLabel" type="Label" parent="DownloadWidget/DownloadVisualizer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "DOWNLOADING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FileDownloadLink" type="Label" parent="DownloadWidget/DownloadVisualizer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="FileDownloadPath" type="Label" parent="DownloadWidget/DownloadVisualizer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="DownloadProgress" type="ProgressBar" parent="DownloadWidget/DownloadVisualizer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_2yn7l")
metadata/_edit_use_anchors_ = true

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="DownloadWidget/Cancel" to="DownloadWidget" method="_on_cancel_pressed"]
[connection signal="pressed" from="DownloadWidget/ACGLink" to="DownloadWidget" method="_on_acg_link_pressed"]
